work with media for team

--- a/index.html
+++ b/index.html
@@ -443,7 +443,7 @@
                                 <h3 class="card__title">Алексей Колмаков</h3>
                                     <p class="card__item">Проектный менеджер</p>
                                 <div class="card__pricetag card__pricetag-2 our-team__button">
-                                    <span>ОПыт работы 8 лет</span>
+                                    ОПыт работы 8 лет
                                 </div>
                             </div>
                             <!-- /.card__text -->
@@ -461,7 +461,7 @@
                                 <h3 class="card__title">Алиса Сухорукова</h3>
                                     <p class="card__item">Дизайнер</p>
                                 <div class="card__pricetag card__pricetag-2 our-team__button">
-                                    <span>Опыт работы 6 лет</span>
+                                    Опыт работы 6 лет
                                 </div>
                             </div>
                             <!-- /.card__text -->
