--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
             <div class="menu">
                 <div class="logo menu__logo">Repair Design Project</div>
                 <nav class="nav menu__nav">
-                    <a href="#" class="nav__item">Главная</a>
-                    <a href="#" class="nav__item">ПРоекты</a>
-                    <a href="#" class="nav__item">Замер</a>
-                    <a href="#" class="nav__item">Команда</a>
-                    <a href="#" class="nav__item">Отзывы</a>
-                    <a href="#" class="nav__item">Контакты</a>
+                    <a href="#home" class="nav__item">Главная</a>
+                    <a href="#projects" class="nav__item">ПРоекты</a>
+                    <a href="#sample" class="nav__item">Замер</a>
+                    <a href="#team" class="nav__item">Команда</a>
+                    <a href="#clients" class="nav__item">Отзывы</a>
+                    <a href="#contacts" class="nav__item">Контакты</a>
                 </nav>
                 <div class="contacts menu__contacts">
                     <a href="tel:+79997683299" class="phone contacts__phone">+7 (999) 768-32-99</a>
@@ -33,7 +33,7 @@
     </header>
 
     <main>
-        <section class="hero">
+        <section class="hero" id="home">
             <div class="instagram hero__instagram">
                 <a href="#" class="instagram__link">Instagram</a>
             </div>
@@ -45,10 +45,10 @@
                     <button class="button hero__button button--outline wow fadeInRight" data-wow-delay="0.6s" data-toggle="modal">Отправить заявку</button>                    
                 </div>
             </div>         
-            <a href="#" class="hero__scroll-down">Листайте вниз</a>
+            <a href="#projects" class="hero__scroll-down">Листайте вниз</a>
         </section>
 
-    <section class="section section--dark projects">
+    <section class="section section--dark projects" id="projects">
         <div class="container projects__container">
             <div class="row">
                 <div class="col-50">
@@ -357,7 +357,7 @@
             </div>
         </section>
 
-        <section class="section section--dark">
+        <section class="section section--dark" id="sample">
             <div class="container section__purpose ">
                 <div class="row">
                     <div class="col-50">
@@ -423,7 +423,7 @@
             </div>
         </section>
 
-        <section class="section our-team section--light">
+        <section class="section our-team section--light" id="team">
             <div class="container">
                 <div class="section-title types__section-title">
                     <h2 class="section-title__heading wow slideInUp">наша команда</h2>
@@ -494,7 +494,7 @@
             </div>
         </section>
 
-        <section class="section our-clients section--light">
+        <section class="section our-clients section--light" id="clients">
             <div class="container">
                 <div class="section-title types__section-title">
                     <h2 class="section-title__heading wow slideInUp">наши клиенты</h2>
@@ -567,7 +567,7 @@
         </section>
     </main>
 
-    <footer class="footer section section--dark">
+    <footer class="footer section section--dark" id="contacts">
         <div class="container">
             <div class="footer__wrap">
                 <h3 class="footer__title">Остались вопросы?</h3>
@@ -601,12 +601,12 @@
                <div class="menu">
                     <div class="logo menu__logo">Repair Design Project</div>
                     <nav class="nav menu__nav">
-                        <a href="#" class="nav__item">Главная</a>
-                        <a href="#" class="nav__item">ПРоекты</a>
-                        <a href="#" class="nav__item">Замер</a>
-                        <a href="#" class="nav__item">Команда</a>
-                        <a href="#" class="nav__item">Отзывы</a>
-                        <a href="#" class="nav__item">Контакты</a>
+                        <a href="#home" class="nav__item">Главная</a>
+                        <a href="#projets" class="nav__item">ПРоекты</a>
+                        <a href="#sample" class="nav__item">Замер</a>
+                        <a href="#team" class="nav__item">Команда</a>
+                        <a href="#clients" class="nav__item">Отзывы</a>
+                        <a href="#contacts" class="nav__item">Контакты</a>
                     </nav>
                     <div class="contacts menu__contacts">
                         <a href="tel:+79997683299" class="phone contacts__phone">+7 (999) 768-32-99</a>
