--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
                         <div class="swiper-wrapper swiper-no-swiping">
                             <!-- Slides -->
                             <div class="swiper-slide"><img src="img/slider/img-1.webp" alt=""></div>
-                            <div class="swiper-slide"><img src="img/slider/img-2.webp" alt=""></div>
-                            <div class="swiper-slide"><img src="img/slider/img-3.webp" alt=""></div>
+                            <div class="swiper-slide"><img src="img/slider/img-2.webp" class="lazyloaded" alt=""></div>
+                            <div class="swiper-slide"><img src="img/slider/img-3.webp" class="lazyloaded" alt=""></div>
                         </div>
                     </div>
                 </div>
@@ -411,11 +411,11 @@
                             <div class="swiper-wrapper swiper-no-swiping">
                                 <!-- Slides -->
                                 <div class="swiper-slide"><img src="img/slider/img01.webp" alt=""></div>
-                                <div class="swiper-slide"><img src="img/slider/img02.webp" alt=""></div>
-                                <div class="swiper-slide"><img src="img/slider/img03.webp" alt=""></div>
-                                <div class="swiper-slide"><img src="img/slider/img04.webp" alt=""></div>
-                                <div class="swiper-slide"><img src="img/slider/img05.webp" alt=""></div>
-                                <div class="swiper-slide"><img src="img/slider/img06.webp" alt=""></div>
+                                <div class="swiper-slide"><img src="img/slider/img02.webp" class="lazyload" alt=""></div>
+                                <div class="swiper-slide"><img src="img/slider/img03.webp" class="lazyload" alt=""></div>
+                                <div class="swiper-slide"><img src="img/slider/img04.webp" class="lazyload" alt=""></div>
+                                <div class="swiper-slide"><img src="img/slider/img05.webp" class="lazyload" alt=""></div>
+                                <div class="swiper-slide"><img src="img/slider/img06.webp" class="lazyload" alt=""></div>
                             </div>
                         </div>
                     </div>
@@ -653,9 +653,9 @@
     <script src="https://unpkg.com/swiper/js/swiper.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.1.0.js"></script>
     <script src="js/wow.min.js"></script>
+    <script src="lazysizes.min.js" async></script>
     <script src="js/jquery.validate.min.js"></script>
     <script src="js/jquery.mask.min.js"></script> 
-    <script src="lazysizes.min.js" async></script>
     <script src="js/main.js"></script>
 </body>
 </html>
