feat: add href for 6 steps

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                         <h2 class="section-title__heading section-title__heading--primary wow fadeIn">Завершенные <span class="section-title__word">проекты</span></h2>
                         <p class="section-title__text wow fadeIn">На сайте представлена ​​лишь небольшая часть работ, выполняемых нашей компанией. За 14 лет работы на строительном рынке мы осчастливили более 1000 семей</p>
                     </div>
-                    <div id="slider" class="swiper-container wow fadeIn" data-wow-delay="0.6s">
+                    <div id="slider" class="swiper-container swiper-container-s1 wow fadeIn" data-wow-delay="0.6s">
                         <!-- Additional required wrapper -->
                         <div class="swiper-wrapper swiper-no-swiping">
                             <!-- Slides -->
@@ -87,7 +87,7 @@
                     </div>
                 </div>                
                 <div class="col-50">
-                    <div class="swiper-container wow fadeIn" data-wow-delay="0.8s">
+                    <div class="swiper-container swiper-container-s1 wow fadeIn" data-wow-delay="0.8s">
                         <!-- Additional required wrapper -->
                         <div class="swiper-wrapper swiper-no-swiping">
                             <!-- Slides -->
@@ -116,13 +116,13 @@
                 <div class="control__text">На каждом объекте установлена ​​камера, которая транслирует ход работы на часах. В любой момент вы можете зайти на наш сайт и следить за ходом работы в вашей квартире. Посмотрите прямую трансляцию с одного из наших объектов! Оставьте заявку ниже чтобы получить ссылку на трансляцию.</div>
                 <form action="send.php" method="POST" class="form control__form">
                     <div class="control__input-group">
-                        <label for="user-name" class="label form__label control__label label--dark">Имя</label>
-                        <input type="text" class="input form__input control__input" id="user-name" name="userName" placeholder="Как вас зовут">
+                        <label for="user-name" class="label form__label control__label">Имя</label>
+                        <input type="text" class="input form__input control__input input--dark" id="user-name" name="userName" placeholder="Как вас зовут">
                     </div>
     
                     <div class="control__input-group">
-                        <label for="user-phone" class="label form__label control__label label--dark">Телефон</label>
-                        <input type="tel" class="input form__input control__input" id="user-phone" name="userPhone" placeholder="Ваш номер телефона">
+                        <label for="user-phone" class="label form__label control__label">Телефон</label>
+                        <input type="tel" class="input form__input control__input input--dark" id="user-phone" name="userPhone" placeholder="Ваш номер телефона">
                     </div>
    
                     <button class="button button--primary control__button">Отправить</button>
@@ -373,51 +373,53 @@
                                 Оценщик приходит, чтобы измерить комнату. Он проконсультирует вас по вопросам техники ремонта, дизайна квартиры, сроков ремонта квартиры в целом и отдельных ее этапов.
                                 </p>                      
                         </div>
+                        <div class="bullets">
+                            <div class="swiper-button-prev1"></div>
+                            <div class="swiper-pagination1"></div>
+                            <div class="swiper-button-next1"></div>
+                        </div>   
                     </div>                
                     <div class="col-50"> 
-                        <div class="swiper-container wow fadeIn" data-wow-delay="0.6s">
+                        <div class="swiper-container swiper-container-s2 wow fadeIn" data-wow-delay="0.6s">
                         <div class="swiper-wrapper swiper-no-swiping">
                             <!-- Slides -->
                             <div class="swiper-slide">
                                 <div class="swiper-slide__text swiper-slide__text__purpose">
-                                    <h3 class="swiper-slide__number">01</h3>
+                                    <h3 class="swiper-slide__number"><a class="slids" href="#one">01</a></h3>
                                     <span class="swiper-slide__value">Выезд на замер <br> помещения</span>
                                 </div>
                                 <div class="swiper-slide__text swiper-slide__text__purpose">
-                                    <h3 class="swiper-slide__number">02</h3>
+                                    <h3 class="swiper-slide__number"><a class="slids" href="#two">02</a></h3>
                                     <span class="swiper-slide__value">Составление <br> сметы</span>
                                 </div>
                                 <div class="swiper-slide__text swiper-slide__text__purpose">
-                                    <h3 class="swiper-slide__number">03</h3>
+                                    <h3 class="swiper-slide__number"><a class="slids" href="#three">03</a></h3>
                                     <span class="swiper-slide__value">Разработка <br> дизайн-проекта</span>
                                 </div>
                                 <div class="swiper-slide__text swiper-slide__text__purpose">
-                                    <h3 class="swiper-slide__number">04</h3>
+                                    <h3 class="swiper-slide__number"><a class="slids" href="#four">04</a></h3>
                                     <span class="swiper-slide__value">Закупка расходных <br> материалов</span>
                                 </div>
                                 <div class="swiper-slide__text swiper-slide__text__purpose">
-                                    <h3 class="swiper-slide__number">05</h3>
+                                    <h3 class="swiper-slide__number"><a class="slids" href="#five">05</a></h3>
                                     <span class="swiper-slide__value">Ремонтно-отделочные <br> работы</span>
                                 </div>
                                 <div class="swiper-slide__text swiper-slide__text__purpose">
-                                    <h3 class="swiper-slide__number">06</h3>
+                                    <h3 class="swiper-slide__number"><a class="slids" href="#six">06</a></h3>
                                     <span class="swiper-slide__value">Прием-сдача <br> работ</span>
                                 </div>
                             </div>
                         </div>
-                        <div class="swiper-button-prev"></div>
-                        <div class="swiper-pagination"></div>
-                        <div class="swiper-button-next"></div>
                         
-                        <div class="swiper-container wow fadeIn" data-wow-delay="0.8s">
+                        <div class="swiper-container swiper-container-s2 wow fadeIn" data-wow-delay="0.8s">
                             <div class="swiper-wrapper swiper-no-swiping">
                                 <!-- Slides -->
-                                <div class="swiper-slide"><img src="img/slider/img01.webp" alt=""></div>
-                                <div class="swiper-slide"><img src="img/slider/img02.webp" alt=""></div>
-                                <div class="swiper-slide"><img src="img/slider/img03.webp" alt=""></div>
-                                <div class="swiper-slide"><img src="img/slider/img04.webp" alt=""></div>
-                                <div class="swiper-slide"><img src="img/slider/img05.webp" alt=""></div>
-                                <div class="swiper-slide"><img src="img/slider/img06.webp" alt=""></div>
+                                <div id="one" class="swiper-slide"><img src="img/slider/img01.webp" alt="Турецкий ремонт"></div>
+                                <div id="two" class="swiper-slide"><img src="img/slider/img02.webp" alt="Турецкий ремонт"></div>
+                                <div id="three" class="swiper-slide"><img src="img/slider/img03.webp" alt="Турецкий ремонт"></div>
+                                <div id="four" class="swiper-slide"><img src="img/slider/img04.webp" alt="Турецкий ремонт"></div>
+                                <div id="five" class="swiper-slide"><img src="img/slider/img05.webp" alt="Турецкий ремонт"></div>
+                                <div id="six" class="swiper-slide"><img src="img/slider/img06.webp" alt="Турецкий ремонт"></div>
                             </div>
                         </div>
                     </div>
