--- a/index.html
+++ b/index.html
@@ -91,9 +91,9 @@
                         <!-- Additional required wrapper -->
                         <div class="swiper-wrapper swiper-no-swiping">
                             <!-- Slides -->
-                            <div class="swiper-slide"><img src="img/slider/img-1.webp" alt=""></div>
-                            <div class="swiper-slide"><img src="img/slider/img-2.webp" class="lazyloaded" alt=""></div>
-                            <div class="swiper-slide"><img src="img/slider/img-3.webp" class="lazyloaded" alt=""></div>
+                            <div class="swiper-slide"><img class="swiper-lazy" src="img/slider/img-1.webp" alt=""></div>
+                            <div class="swiper-slide"><img class="swiper-lazy" data-src="img/slider/img-2.webp" class="lazyloaded" alt=""></div>
+                            <div class="swiper-slide"><img class="swiper-lazy" data-src="img/slider/img-3.webp" class="lazyloaded" alt=""></div>
                         </div>
                     </div>
                 </div>
@@ -383,29 +383,29 @@
                         <div class="swiper-container swiper-container-s2 wow fadeIn" data-wow-delay="0.6s">
                         <div class="swiper-wrapper swiper-no-swiping">
                             <!-- Slides -->
-                            <div class="swiper-slide">
-                                <div class="swiper-slide__text swiper-slide__text__purpose">
-                                    <h3 class="swiper-slide__number"><a class="slids" href="#one">01</a></h3>
+                            <div class="swiper-slide swiper-slide__href">
+                                <div class="swiper-slide__text swiper-slide__text__purpose" data-index="0">
+                                    <h3 class="swiper-slide__number"><a class="slids slide-1" href="#">01</a></h3>
                                     <span class="swiper-slide__value">Выезд на замер <br> помещения</span>
                                 </div>
-                                <div class="swiper-slide__text swiper-slide__text__purpose">
-                                    <h3 class="swiper-slide__number"><a class="slids" href="#two">02</a></h3>
+                                <div class="swiper-slide__text swiper-slide__text__purpose" data-index="1">
+                                    <h3 class="swiper-slide__number"><a class="slids slide-2" href="#">02</a></h3>
                                     <span class="swiper-slide__value">Составление <br> сметы</span>
                                 </div>
-                                <div class="swiper-slide__text swiper-slide__text__purpose">
-                                    <h3 class="swiper-slide__number"><a class="slids" href="#three">03</a></h3>
+                                <div class="swiper-slide__text swiper-slide__text__purpose" data-index="2">
+                                    <h3 class="swiper-slide__number"><a class="slids slide-3" href="#">03</a></h3>
                                     <span class="swiper-slide__value">Разработка <br> дизайн-проекта</span>
                                 </div>
-                                <div class="swiper-slide__text swiper-slide__text__purpose">
-                                    <h3 class="swiper-slide__number"><a class="slids" href="#four">04</a></h3>
+                                <div class="swiper-slide__text swiper-slide__text__purpose" data-index="3">
+                                    <h3 class="swiper-slide__number"><a class="slids slide-4"  href="#">04</a></h3>
                                     <span class="swiper-slide__value">Закупка расходных <br> материалов</span>
                                 </div>
-                                <div class="swiper-slide__text swiper-slide__text__purpose">
-                                    <h3 class="swiper-slide__number"><a class="slids" href="#five">05</a></h3>
+                                <div class="swiper-slide__text swiper-slide__text__purpose" data-index="4">
+                                    <h3 class="swiper-slide__number"><a class="slids slide-5" href="#">05</a></h3>
                                     <span class="swiper-slide__value">Ремонтно-отделочные <br> работы</span>
                                 </div>
-                                <div class="swiper-slide__text swiper-slide__text__purpose">
-                                    <h3 class="swiper-slide__number"><a class="slids" href="#six">06</a></h3>
+                                <div class="swiper-slide__text swiper-slide__text__purpose" data-index="5">
+                                    <h3 class="swiper-slide__number"><a class="slids slide-6" href="#">06</a></h3>
                                     <span class="swiper-slide__value">Прием-сдача <br> работ</span>
                                 </div>
                             </div>
@@ -414,12 +414,12 @@
                         <div class="swiper-container swiper-container-s2 wow fadeIn" data-wow-delay="0.8s">
                             <div class="swiper-wrapper swiper-no-swiping">
                                 <!-- Slides -->
-                                <div id="one" class="swiper-slide"><img src="img/slider/img01.webp" alt="Турецкий ремонт"></div>
-                                <div id="two" class="swiper-slide"><img src="img/slider/img02.webp" alt="Турецкий ремонт"></div>
-                                <div id="three" class="swiper-slide"><img src="img/slider/img03.webp" alt="Турецкий ремонт"></div>
-                                <div id="four" class="swiper-slide"><img src="img/slider/img04.webp" alt="Турецкий ремонт"></div>
-                                <div id="five" class="swiper-slide"><img src="img/slider/img05.webp" alt="Турецкий ремонт"></div>
-                                <div id="six" class="swiper-slide"><img src="img/slider/img06.webp" alt="Турецкий ремонт"></div>
+                                <div id="one" class="swiper-slide"><img class="swiper-lazy" src="img/slider/img01.webp" alt="Турецкий ремонт"></div>
+                                <div id="two" class="swiper-slide"><img class="swiper-lazy" data-src="img/slider/img02.webp" alt="Турецкий ремонт"></div>
+                                <div id="three" class="swiper-slide"><img class="swiper-lazy" data-src="img/slider/img03.webp" alt="Турецкий ремонт"></div>
+                                <div id="four" class="swiper-slide"><img class="swiper-lazy" data-src="img/slider/img04.webp" alt="Турецкий ремонт"></div>
+                                <div id="five" class="swiper-slide"><img class="swiper-lazy" data-src="img/slider/img05.webp" alt="Турецкий ремонт"></div>
+                                <div id="six" class="swiper-slide"><img class="swiper-lazy" data-src="img/slider/img06.webp" alt="Турецкий ремонт"></div>
                             </div>
                         </div>
                     </div>
