--- a/index.html
+++ b/index.html
@@ -360,8 +360,8 @@
             </div>
         </section>
 
-        <section class="section section--dark" id="sample">
-            <div class="container section__purpose ">
+        <section class="section section__purpose section--dark" id="sample">
+            <div class="container container__purpose">
                 <div class="row">
                     <div class="col-50">
                         <div class="section-title section-title--left wow fadeIn" data-wow-delay="0.2s">
@@ -414,12 +414,12 @@
                         <div class="swiper-container swiper-container-s2 wow fadeIn" data-wow-delay="0.8s">
                             <div class="swiper-wrapper swiper-no-swiping">
                                 <!-- Slides -->
-                                <div id="one" class="swiper-slide"><img class="swiper-lazy" src="img/slider/img01.webp" alt="Турецкий ремонт"></div>
-                                <div id="two" class="swiper-slide"><img class="swiper-lazy" data-src="img/slider/img02.webp" alt="Турецкий ремонт"></div>
-                                <div id="three" class="swiper-slide"><img class="swiper-lazy" data-src="img/slider/img03.webp" alt="Турецкий ремонт"></div>
-                                <div id="four" class="swiper-slide"><img class="swiper-lazy" data-src="img/slider/img04.webp" alt="Турецкий ремонт"></div>
-                                <div id="five" class="swiper-slide"><img class="swiper-lazy" data-src="img/slider/img05.webp" alt="Турецкий ремонт"></div>
-                                <div id="six" class="swiper-slide"><img class="swiper-lazy" data-src="img/slider/img06.webp" alt="Турецкий ремонт"></div>
+                                <div data-index="0" class="swiper-slide"><img class="swiper-lazy" src="img/slider/img01.webp" alt="Турецкий ремонт"></div>
+                                <div data-index="1" class="swiper-slide"><img class="swiper-lazy" data-src="img/slider/img02.webp" alt="Турецкий ремонт"></div>
+                                <div data-index="2" class="swiper-slide"><img class="swiper-lazy" data-src="img/slider/img03.webp" alt="Турецкий ремонт"></div>
+                                <div data-index="3" class="swiper-slide"><img class="swiper-lazy" data-src="img/slider/img04.webp" alt="Турецкий ремонт"></div>
+                                <div data-index="4" class="swiper-slide"><img class="swiper-lazy" data-src="img/slider/img05.webp" alt="Турецкий ремонт"></div>
+                                <div data-index="5" class="swiper-slide"><img class="swiper-lazy" data-src="img/slider/img06.webp" alt="Турецкий ремонт"></div>
                             </div>
                         </div>
                     </div>
