--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </script>
 </head>
 <body>
-    <!-- Yandex.Metrika counter --> <script type="text/javascript" > (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)}; m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)}) (window, document, "script", "https://cdn.jsdelivr.net/npm/yandex-metrica-watch/tag.js", "ym"); ym(61230730, "init", { clickmap:true, trackLinks:true, accurateTrackBounce:true, webvisor:true }); </script> <noscript><div><img src="https://mc.yandex.ru/watch/61230730" style="position:absolute; left:-9999px;" alt="" /></div></noscript> <!-- /Yandex.Metrika counter -->
+    <!-- Yandex.Metrika counter --> <script> (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)}; m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)}) (window, document, "script", "https://cdn.jsdelivr.net/npm/yandex-metrica-watch/tag.js", "ym"); ym(61230730, "init", { clickmap:true, trackLinks:true, accurateTrackBounce:true, webvisor:true }); </script> <noscript><div><img src="https://mc.yandex.ru/watch/61230730" style="position:absolute; left:-9999px;" alt="" /></div></noscript> <!-- /Yandex.Metrika counter -->
     <header class="header">
         <div class="container">
             <div class="menu">
@@ -92,8 +92,8 @@
                         <div class="swiper-wrapper swiper-no-swiping">
                             <!-- Slides -->
                             <div class="swiper-slide"><img class="swiper-lazy" src="img/slider/img-1.webp" alt=""></div>
-                            <div class="swiper-slide"><img class="swiper-lazy" data-src="img/slider/img-2.webp" class="lazyloaded" alt=""></div>
-                            <div class="swiper-slide"><img class="swiper-lazy" data-src="img/slider/img-3.webp" class="lazyloaded" alt=""></div>
+                            <div class="swiper-slide"><img class="swiper-lazy" data-src="img/slider/img-2.webp" alt=""></div>
+                            <div class="swiper-slide"><img class="swiper-lazy" data-src="img/slider/img-3.webp" alt=""></div>
                         </div>
                     </div>
                 </div>
