--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@
                                 Оценщик приходит, чтобы измерить комнату. Он проконсультирует вас по вопросам техники ремонта, дизайна квартиры, сроков ремонта квартиры в целом и отдельных ее этапов.
                                 </p>                      
                         </div>
-                        <div class="bullets">
+                        <div class="bullets wow fadeIn" data-wow-delay="0.3s">
                             <div class="swiper-button-prev1"></div>
                             <div class="swiper-pagination1"></div>
                             <div class="swiper-button-next1"></div>
@@ -384,28 +384,28 @@
                         <div class="swiper-wrapper swiper-no-swiping">
                             <!-- Slides -->
                             <div class="swiper-slide swiper-slide__href">
-                                <div class="swiper-slide__text swiper-slide__text__purpose" data-index="0">
-                                    <h3 class="swiper-slide__number"><a class="slids slide-1" href="#">01</a></h3>
+                                <div class="swiper-slide__text swiper-slide__text__purpose swiper-slide__text--active">
+                                    <h3 class="swiper-slide__number"><a class="slids slids--active slide-1" id="btn1" href="#">01</a></h3>
                                     <span class="swiper-slide__value">Выезд на замер <br> помещения</span>
                                 </div>
-                                <div class="swiper-slide__text swiper-slide__text__purpose" data-index="1">
-                                    <h3 class="swiper-slide__number"><a class="slids slide-2" href="#">02</a></h3>
+                                <div class="swiper-slide__text swiper-slide__text__purpose">
+                                    <h3 class="swiper-slide__number"><a class="slids slide-2"  id="btn2" href="#">02</a></h3>
                                     <span class="swiper-slide__value">Составление <br> сметы</span>
                                 </div>
-                                <div class="swiper-slide__text swiper-slide__text__purpose" data-index="2">
-                                    <h3 class="swiper-slide__number"><a class="slids slide-3" href="#">03</a></h3>
+                                <div class="swiper-slide__text swiper-slide__text__purpose">
+                                    <h3 class="swiper-slide__number"><a class="slids slide-3" id="btn3" href="#">03</a></h3>
                                     <span class="swiper-slide__value">Разработка <br> дизайн-проекта</span>
                                 </div>
-                                <div class="swiper-slide__text swiper-slide__text__purpose" data-index="3">
-                                    <h3 class="swiper-slide__number"><a class="slids slide-4"  href="#">04</a></h3>
+                                <div class="swiper-slide__text swiper-slide__text__purpose">
+                                    <h3 class="swiper-slide__number"><a class="slids slide-4" id="btn4"  href="#">04</a></h3>
                                     <span class="swiper-slide__value">Закупка расходных <br> материалов</span>
                                 </div>
-                                <div class="swiper-slide__text swiper-slide__text__purpose" data-index="4">
-                                    <h3 class="swiper-slide__number"><a class="slids slide-5" href="#">05</a></h3>
+                                <div class="swiper-slide__text swiper-slide__text__purpose">
+                                    <h3 class="swiper-slide__number"><a class="slids slide-5" id="btn5" href="#">05</a></h3>
                                     <span class="swiper-slide__value">Ремонтно-отделочные <br> работы</span>
                                 </div>
-                                <div class="swiper-slide__text swiper-slide__text__purpose" data-index="5">
-                                    <h3 class="swiper-slide__number"><a class="slids slide-6" href="#">06</a></h3>
+                                <div class="swiper-slide__text swiper-slide__text__purpose">
+                                    <h3 class="swiper-slide__number"><a class="slids slide-6" id="btn6" href="#">06</a></h3>
                                     <span class="swiper-slide__value">Прием-сдача <br> работ</span>
                                 </div>
                             </div>
@@ -414,12 +414,12 @@
                         <div class="swiper-container swiper-container-s2 wow fadeIn" data-wow-delay="0.8s">
                             <div class="swiper-wrapper swiper-no-swiping">
                                 <!-- Slides -->
-                                <div data-index="0" class="swiper-slide"><img class="swiper-lazy" src="img/slider/img01.webp" alt="Турецкий ремонт"></div>
-                                <div data-index="1" class="swiper-slide"><img class="swiper-lazy" data-src="img/slider/img02.webp" alt="Турецкий ремонт"></div>
-                                <div data-index="2" class="swiper-slide"><img class="swiper-lazy" data-src="img/slider/img03.webp" alt="Турецкий ремонт"></div>
-                                <div data-index="3" class="swiper-slide"><img class="swiper-lazy" data-src="img/slider/img04.webp" alt="Турецкий ремонт"></div>
-                                <div data-index="4" class="swiper-slide"><img class="swiper-lazy" data-src="img/slider/img05.webp" alt="Турецкий ремонт"></div>
-                                <div data-index="5" class="swiper-slide"><img class="swiper-lazy" data-src="img/slider/img06.webp" alt="Турецкий ремонт"></div>
+                                <div data-swiper-slide-index="0" class="swiper-slide"><img class="swiper-lazy" src="img/slider/img01.webp" alt="Турецкий ремонт"></div>
+                                <div data-swiper-slide-index="1" class="swiper-slide"><img class="swiper-lazy" data-src="img/slider/img02.webp" alt="Турецкий ремонт"></div>
+                                <div data-swiper-slide-index="2" class="swiper-slide"><img class="swiper-lazy" data-src="img/slider/img03.webp" alt="Турецкий ремонт"></div>
+                                <div data-swiper-slide-index="3" class="swiper-slide"><img class="swiper-lazy" data-src="img/slider/img04.webp" alt="Турецкий ремонт"></div>
+                                <div data-swiper-slide-index="4" class="swiper-slide"><img class="swiper-lazy" data-src="img/slider/img05.webp" alt="Турецкий ремонт"></div>
+                                <div data-swiper-slide-index="5" class="swiper-slide"><img class="swiper-lazy" data-src="img/slider/img06.webp" alt="Турецкий ремонт"></div>
                             </div>
                         </div>
                     </div>
