feat: add work with slider in 6 steps

--- a/index.html
+++ b/index.html
@@ -367,7 +367,13 @@
                         <div class="section-title section-title--left wow fadeIn" data-wow-delay="0.2s">
                             <p class="section-title__subtitle">как мы работаем</p>
                             <h2 class="section-title__heading section-title__heading--primary">6 шагов<span class="section-title__word">до цели</span></h2>
-                            <p class="section-title__part">1/6</p>
+                            <p class="section-title__part section-title__part1">1/6</p>
+                            <p class="section-title__part section-title__part2 section-title__part--nonactive">2/6</p>
+                            <p class="section-title__part section-title__part3 section-title__part--nonactive">3/6</p>
+                            <p class="section-title__part section-title__part4 section-title__part--nonactive">4/6</p>
+                            <p class="section-title__part section-title__part5 section-title__part--nonactive">5/6</p>
+                            <p class="section-title__part section-title__part6 section-title__part--nonactive">6/6</p>
+
                             <h3 class="section-title__title section-title__title--primary">Выезд на замеры <br> помещения</h3>
                             <p class="section-title__text">После вашего звонка мы идем к вам, чтобы проконсультироваться и измерить помещения вашей квартиры. Во время нашей встречи вы можете задать абсолютно любые вопросы, касаемо ремонта. 
                                 Оценщик приходит, чтобы измерить комнату. Он проконсультирует вас по вопросам техники ремонта, дизайна квартиры, сроков ремонта квартиры в целом и отдельных ее этапов.
@@ -380,35 +386,33 @@
                         </div>   
                     </div>                
                     <div class="col-50"> 
-                        <div class="swiper-container swiper-container-s2 wow fadeIn" data-wow-delay="0.6s">
-                        <div class="swiper-wrapper swiper-no-swiping">
-                            <!-- Slides -->
-                            <div class="swiper-slide swiper-slide__href">
-                                <div class="swiper-slide__text swiper-slide__text__purpose swiper-slide__text--active">
-                                    <h3 class="swiper-slide__number"><a class="slids slids--active slide-1" id="btn1" href="#">01</a></h3>
+                        <div class="menu-swiper wow fadeIn" data-wow-delay="0.6s">
+                            <ul class="swiper-slide__menu">
+                                <li class="swiper-slide__text swiper-slide__text__purpose swiper-slide__text--active slide-1">
+                                    <h3 class="swiper-slide__number"><a class="slids slids--active" id="btn1" href="#">01</a></h3>
                                     <span class="swiper-slide__value">Выезд на замер <br> помещения</span>
-                                </div>
-                                <div class="swiper-slide__text swiper-slide__text__purpose">
-                                    <h3 class="swiper-slide__number"><a class="slids slide-2"  id="btn2" href="#">02</a></h3>
+                                </li>
+                                <li class="swiper-slide__text swiper-slide__text__purpose slide-2">
+                                    <h3 class="swiper-slide__number"><a class="slids"  id="btn2" href="#">02</a></h3>
                                     <span class="swiper-slide__value">Составление <br> сметы</span>
-                                </div>
-                                <div class="swiper-slide__text swiper-slide__text__purpose">
-                                    <h3 class="swiper-slide__number"><a class="slids slide-3" id="btn3" href="#">03</a></h3>
+                                </li>
+                                <li class="swiper-slide__text swiper-slide__text__purpose slide-3">
+                                    <h3 class="swiper-slide__number"><a class="slids" id="btn3" href="#">03</a></h3>
                                     <span class="swiper-slide__value">Разработка <br> дизайн-проекта</span>
-                                </div>
-                                <div class="swiper-slide__text swiper-slide__text__purpose">
-                                    <h3 class="swiper-slide__number"><a class="slids slide-4" id="btn4"  href="#">04</a></h3>
+                                </li>
+                                <li class="swiper-slide__text swiper-slide__text__purpose slide-4">
+                                    <h3 class="swiper-slide__number"><a class="slids" id="btn4"  href="#">04</a></h3>
                                     <span class="swiper-slide__value">Закупка расходных <br> материалов</span>
-                                </div>
-                                <div class="swiper-slide__text swiper-slide__text__purpose">
-                                    <h3 class="swiper-slide__number"><a class="slids slide-5" id="btn5" href="#">05</a></h3>
+                                </li>
+                                <li class="swiper-slide__text swiper-slide__text__purpose slide-5">
+                                    <h3 class="swiper-slide__number"><a class="slids" id="btn5" href="#">05</a></h3>
                                     <span class="swiper-slide__value">Ремонтно-отделочные <br> работы</span>
-                                </div>
-                                <div class="swiper-slide__text swiper-slide__text__purpose">
-                                    <h3 class="swiper-slide__number"><a class="slids slide-6" id="btn6" href="#">06</a></h3>
+                                </li>
+                                <li class="swiper-slide__text swiper-slide__text__purpose slide-6">
+                                    <h3 class="swiper-slide__number"><a class="slids" id="btn6" href="#">06</a></h3>
                                     <span class="swiper-slide__value">Прием-сдача <br> работ</span>
-                                </div>
-                            </div>
+                                </li>
+                            </ul>
                         </div>
                         
                         <div class="swiper-container swiper-container-s2 wow fadeIn" data-wow-delay="0.8s">
