--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header class="header">
         <div class="container">
             <div class="menu">
-                <div class="logo menu__logo">Repair Design Project</div>
+                <a class="logo menu__logo" href="#">Repair Design Project</a>
                 <nav class="nav menu__nav">
                     <a href="#home" class="nav__item">Главная</a>
                     <a href="#projects" class="nav__item">ПРоекты</a>
@@ -37,7 +37,7 @@
     <main>
         <section class="hero" id="home">
             <div class="instagram hero__instagram">
-                <a href="#" class="instagram__link">Instagram</a>
+                <a href="ttps://www.instagram.com/" class="instagram__link">Instagram</a>
             </div>
             <div class="container">
                 <div class="hero__content">                
@@ -125,7 +125,7 @@
                         <input type="tel" class="input form__input control__input input--dark" id="user-phone" name="userPhone" placeholder="Ваш номер телефона">
                     </div>
    
-                    <button class="button button--primary control__button">Отправить</button>
+                    <button class="button control__button button--primary">Отправить</button>
 
                     <div class="policy control__policy">
                         <input type="checkbox" class="policy__checkbox" id="policy-checkbox" name="policyCheckbox" checked>
@@ -375,7 +375,7 @@
                             <p class="section-title__part section-title__part6 section-title__part--nonactive">6/6</p>
 
                             <h3 class="section-title__title section-title__title--primary">Выезд на замеры <br> помещения</h3>
-                            <p class="section-title__text">После вашего звонка мы идем к вам, чтобы проконсультироваться и измерить помещения вашей квартиры. Во время нашей встречи вы можете задать абсолютно любые вопросы, касаемо ремонта. 
+                            <p class="section-title__text-2">После вашего звонка мы идем к вам, чтобы проконсультироваться и измерить помещения вашей квартиры. Во время нашей встречи вы можете задать абсолютно любые вопросы, касаемо ремонта. 
                                 Оценщик приходит, чтобы измерить комнату. Он проконсультирует вас по вопросам техники ремонта, дизайна квартиры, сроков ремонта квартиры в целом и отдельных ее этапов.
                                 </p>                      
                         </div>
@@ -450,7 +450,7 @@
                             <img src="img/our_team/img1.webp" alt="Алексей Колмаков" class="card__image">
                             <div class="card__text our-team__card">
                                 <h3 class="card__title">Алексей Колмаков</h3>
-                                    <p class="card__item">Проектный менеджер</p>
+                                    <p class="card__item-2">Проектный менеджер</p>
                                 <div class="card__pricetag card__pricetag-2 our-team__button">
                                     ОПыт работы 8 лет
                                 </div>
@@ -468,7 +468,7 @@
                             <img src="img/our_team/img2.webp" alt="Алиса Сухорукова" class="card__image">
                             <div class="card__text our-team__card">
                                 <h3 class="card__title">Алиса Сухорукова</h3>
-                                    <p class="card__item">Дизайнер</p>
+                                    <p class="card__item-2">Дизайнер</p>
                                 <div class="card__pricetag card__pricetag-2 our-team__button">
                                     Опыт работы 6 лет
                                 </div>
@@ -486,7 +486,7 @@
                             <img src="img/our_team/img3.webp" alt="Давид Волынев" class="card__image">
                             <div class="card__text our-team__card">
                                 <h3 class="card__title">Давид Волынев</h3>
-                                    <p class="card__item">Бригадир</p>
+                                    <p class="card__item-2">Бригадир</p>
                                 <div class="card__pricetag card__pricetag-2 our-team__button">
                                     Опыт работы 7 лет
                                 </div>    
@@ -510,7 +510,7 @@
                     <div class="section-title__image">
                         <img src="img/icon/client_icon.svg" alt="наши клиенты">
                     </div>
-                    <p class="card__subtitle our-clients__subtitle">80% наших клиентов рекомендуют нас своим знакомым и друзьям</p>
+                    <p class="card__subtitle our-clients__subtitle">80% наших клиентов рекомендуют нас <br> своим знакомым и друзьям</p>
                 </div>
                 <div class="row">
                     <div class="col-30">
@@ -522,9 +522,15 @@
                                 </div>                                
                                     <p class="card__item our-clients__item">Я хочу поблагодарить ребят за их работу. Они вложили душу в ремонт. Я очень благодарна, что сделали как для самих себя. Большое спасибо, я выражаю проектному менеджеру за его профессионализм и подход. Процесс ремонта был завершен быстрее, чем ожидалось. Команда мобильная и профессиональная. Работы выполнены качественно без нареканий. Цены демократические. Я рекомендую этих мастеров.</p>
                                 <div class="card__pricetag card__pricetag-1 our-clients__button">
-                                    <img src="img/clients/icon/left/Group21.4.svg" alt="иконка"><span class="our-clients__span">40 М<sup>2</sup></span>
+                                    <div class="our-clients__left">
+                                        <img src="img/clients/icon/left/Group21.4.svg" alt="иконка">
+                                        <span class="our-clients__span">40 М<sup>2</sup></span>
+                                    </div>
                                     <img class="our-clients__stick" src="img/clients/icon/stick/Vector2.svg" alt="">
-                                    <img src="img/clients/icon/right/Group.svg" alt="иконка"><span class="our-clients__span">48 дней</span>
+                                    <div class="our-clients__right">
+                                        <img src="img/clients/icon/right/Group.svg" alt="иконка">
+                                        <span class="our-clients__span">48 дней</span>
+                                    </div>
                                 </div>
                             </div>
                             <!-- /.card__text -->
@@ -539,11 +545,17 @@
                                     <img src="img/clients/img2.webp" alt="Большов Михаил Анатольевич" class="card__image client-img">
                                     <h3 class="card__title our-clients__title">Большов Михаил Анатольевич</h3>
                                 </div>
-                                    <p class="card__item">Я хочу поблагодарить ребят за их работу. Они вложили душу в ремонт. Я очень благодарен, что сделали как для самих себя. Большое спасибо, я выражаю проектному менеджеру за его профессионализм и подход. Процесс ремонта был завершен быстрее, чем ожидалось. Команда мобильная и профессиональная. Работы выполнены качественно без нареканий. Качество высокое. Я рекомендую этих мастеров.</p>
+                                    <p class="card__item our-clients__item">Я хочу поблагодарить ребят за их работу. Они вложили душу в ремонт. Я очень благодарен, что сделали как для самих себя. Большое спасибо, я выражаю проектному менеджеру за его профессионализм и подход. Процесс ремонта был завершен быстрее, чем ожидалось. Команда мобильная и профессиональная. Работы выполнены качественно без нареканий. Качество высокое. Я рекомендую этих мастеров.</p>
                                 <div class="card__pricetag card__pricetag-1 our-clients__button">
-                                    <img src="img/clients/icon/left/Group21.4.svg" alt="иконка"><span class="our-clients__span">90 М<sup>2</sup></span>
+                                    <div class="our-clients__left">
+                                        <img src="img/clients/icon/left/Group21.4.svg" alt="иконка">
+                                        <span class="our-clients__span">90 М<sup>2</sup></span>
+                                    </div>
                                     <img class="our-clients__stick" src="img/clients/icon/stick/Vector2.svg" alt="">
-                                    <img src="img/clients/icon/right/Group.svg" alt="иконка"><span class="our-clients__span">128 дней</span>
+                                    <div class="our-clients__right">                            
+                                        <img src="img/clients/icon/right/Group.svg" alt="иконка">
+                                        <span class="our-clients__span">128 дней</span>
+                                    </div>
                                 </div>
                             </div>
                             <!-- /.card__text -->
@@ -558,11 +570,17 @@
                                     <img src="img/clients/img3.webp" alt="Хасанов Даниил Муратович" class="card__image client-img">
                                     <h3 class="card__title our-clients__title">Хасанов Даниил Муратович</h3>
                                 </div>
-                                    <p class="card__item">Я хочу поблагодарить ребят за их работу. Они вложили душу в ремонт. Я очень благодарен, что сделали как для самих себя. Большое спасибо, я выражаю проектному менеджеру за его профессионализм и подход. Процесс ремонта был завершен быстрее, чем ожидалось. Команда мобильная и профессиональная. Работы выполнены качественно без нареканий. Качество высокое. Цены демократические.</p>
+                                    <p class="card__item our-clients__item">Я хочу поблагодарить ребят за их работу. Они вложили душу в ремонт. Я очень благодарен, что сделали как для самих себя. Большое спасибо, я выражаю проектному менеджеру за его профессионализм и подход. Процесс ремонта был завершен быстрее, чем ожидалось. Команда мобильная и профессиональная. Работы выполнены качественно без нареканий. Качество высокое. Цены демократические.</p>
                             <div class="card__pricetag card__pricetag-1 our-clients__button">
-                                <img src="img/clients/icon/left/Group21.4.svg" alt="иконка"><span class="our-clients__span">56 М<sup>2</sup></span>
+                                <div class="our-clients__left">
+                                    <img src="img/clients/icon/left/Group21.4.svg" alt="иконка">
+                                    <span class="our-clients__span">56 М<sup>2</sup></span>
+                                </div>
                                 <img class="our-clients__stick" src="img/clients/icon/stick/Vector2.svg" alt="">
-                                <img src="img/clients/icon/right/Group.svg" alt="иконка"><span class="our-clients__span">86 дней</span>
+                                <div class="our-clients__right">                                
+                                    <img src="img/clients/icon/right/Group.svg" alt="иконка">
+                                    <span class="our-clients__span">86 дней</span>
+                                </div>
                             </div>    
                             </div>
                             <!-- /.card__text -->
@@ -601,14 +619,15 @@
                     <button class="button button--primary footer__button">Отправить</button>
                 </form>
             </div>
-            <div class="map footer__map" id="map">
-                <script async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Afe79fc31522df22f8e93fb67d580160a0b4d3c475c817cc5f460b92fa5e242d8&amp;width=100%25&amp;height=465&amp;lang=ru_RU&amp;scroll=false"></script>
-            </div>                  
+                <div class="ymap-container">
+                    <div class="loader loader-default"></div>
+                    <div id="map-yandex"></div>
+                </div><!-- .ymap-container -->       
         </div>    
         <div class="footer__menu section--dark">
             <div class="container">
                <div class="menu">
-                    <div class="logo menu__logo">Repair Design Project</div>
+                <a class="logo menu__logo" href="#home">Repair Design Project</a>
                     <nav class="nav menu__nav">
                         <a href="#home" class="nav__item">Главная</a>
                         <a href="#projects" class="nav__item">ПРоекты</a>
@@ -639,7 +658,7 @@
                     <label for="user_phone" class="label form__label label--light">Телефон</label>
                     <input type="tel" autocomplete="off" name="userPhone" class="input form__input modal__input input--light" id="user_phone" placeholder="Ваш номер телефона">
                 </div>
-                <div class="input-group modal__input-group">
+                <div class="input-group modal__input-group modal__input-group__last">
                     <label for="user_email" class="label form__label label--light">Email</label>
                     <input type="email" autocomplete="off" name="userEmail" class="input form__input modal__input input--light" id="user_email" placeholder="Ваш email">
                 </div>
